--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Sayani Maity — Digital Forensics & Ethical Hacking</title>
-<meta name="description" content="Portfolio & resume of Sayani Maity — Digital Forensics student."/>
+<title>SAYANI MAITY — Digital Forensics & Ethical Hacking</title>
+<meta name="description" content="Portfolio & resume of SAYANI MAITY — Digital Forensics student."/>
 <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 <canvas id="matrix"></canvas>
 <header class="site-header container">
-  <div class="brand">Sayani <span>Maity</span></div>
+  <div class="brand">SAYANI <span>MAITY</span></div>
   <nav class="top-nav">
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
@@ -24,7 +24,7 @@
 <main class="container">
   <section class="hero">
     <div class="hero-left">
-      <h1>Ethical Hacker & Digital Forensics Enthusiast</h1>
+      <h1>Ethical Hacker (pentester) & Digital Forensics Enthusiast</h1>
       <p class="lead">I investigate digital evidence, build security tools, and research applied techniques in cybersecurity. Open to internships, bug bounties, and collaborations.</p>
       <div class="hero-cta">
         <a class="btn" href="#projects">View Projects</a>
@@ -39,12 +39,16 @@
       <div class="profile-card">
         <div class="photo-wrap"><img src="assets/profile.jpg" alt="Sayani"></div>
         <div class="info">
-          <h2>Sayani Maity</h2>
+          <h2>SAYANI MAITY</h2>
           <p>Digital Forensics & Ethical Hacking Student</p>
           <div class="socials">
             <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
             <a href="mailto:sayanimaity2024@gmail.com">Email</a>
+            <a href="https://discord.com/invite/isayani_78" targets="_blank">Discord</a>
+            <a href="https://www.geeksforgeeks.org/user/isayani_05/" targets="_blank">GeeksforGeeks</a>
+            <a href="https://medium.com/@isayani-78" targets="_blank">Medium</a>
+            <a href="https://www.facebook.com/isayani78" targets=_blank">Facebook</a>
           </div>
         </div>
       </div>
@@ -61,14 +65,14 @@
   <section id="about" class="section two-col">
     <div>
       <h2>About Me</h2>
-      <p>I am <strong>Sayani Maity</strong>, currently pursuing my <strong>B.Sc. in Digital Forensics</strong> at the Indian School of Ethical Hacking under MAKAUT (2023–2026). With a foundation in pure sciences from St. Thomas' High School (ICSE, ISC), I blend academic research and hands-on practice in areas such as digital forensics, penetration testing, and OSINT. I enjoy producing forensic case reports, building practical security tools, and investigating system artifacts to reconstruct events.</p>
+      <p>I am <strong>SAYANI MAITY</strong>, currently pursuing my <strong>B.Sc. in Digital Forensics</strong> at the Indian School of Ethical Hacking under MAKAUT (2023–2026). With a foundation in pure sciences from St. Thomas' High School (ICSE, ISC), I blend academic research and hands-on practice in areas such as digital forensics, penetration testing, and OSINT. I enjoy producing forensic case reports, building practical security tools, and investigating system artifacts to reconstruct events.</p>
       <p>My academic and project work focuses on secure coding, artifact recovery, and applied machine learning for security. I am actively developing tools and prototypes such as <em>CMTL</em> (CyberSec Multi-Tool Launcher) and an <em>AI-powered Phishing Email Detector</em>. I am open to mentorships, collaborations, internships, and research partnerships.</p>
     </div>
     <div class="side-note">
       <h3>Education</h3>
       <p><strong>B.Sc. Digital Forensics</strong><br>Indian School of Ethical Hacking, MAKAUT (2023–2026)</p>
       <h3>Hobbies</h3>
-      <p>Painting • CTFs • Research • Bug Bounties</p>
+      <p>Painting • CTFs • Research • VAPT</p>
     </div>
   </section>
 
@@ -90,22 +94,22 @@
       <article class="project">
         <h3>Basic Password Generator (2025)</h3>
         <p>A Python-based password generator that creates strong, random passwords with configurable length and character rules. The tool emphasizes entropy, user-configurable policies, and safe defaults. It demonstrates practical considerations for password strength and secure storage recommendations.</p>
-        <p><a class="small" href="https://github.com/isayani-78" target="_blank">View on GitHub</a></p>
+        <p><a class="small" href="https://github.com/isayani-78/-Basic-Strong-Password-Generator" target="_blank">View on GitHub</a></p>
       </article>
       <article class="project">
         <h3>Caesar Cipher Generator (2025)</h3>
         <p>An educational implementation of the classic Caesar Cipher that demonstrates substitution cipher concepts and cryptographic basics.</p>
-        <p><a class="small" href="https://github.com/isayani-78" target="_blank">View on GitHub</a></p>
+        <p><a class="small" href="https://github.com/isayani-78/caesar-cipher-generator" target="_blank">View on GitHub</a></p>
       </article>
       <article class="project">
         <h3>CMTL — CyberSec Multi-Tool Launcher (2025–Present)</h3>
         <p>CMTL centralizes common cybersecurity utilities such as network scanning, OS fingerprinting, and vulnerability checks. It streamlines workflows for students and analysts by aggregating results into simple reports for quick forensic triage.</p>
-        <p><a class="small" href="https://github.com/isayani-78" target="_blank">View on GitHub</a></p>
+        <p><a class="small" href="https://github.com/isayani-78/CMTL" target="_blank">View on GitHub</a></p>
       </article>
       <article class="project">
         <h3>AI-Powered Phishing Email Detector (2025–Present)</h3>
         <p>In development — this research-driven project uses NLP features, header analysis, and URL reputation signals to detect phishing emails. Seeking collaborators to expand datasets and modeling approaches.</p>
-        <p><a class="small" href="https://github.com/isayani-78" target="_blank">View on GitHub</a></p>
+        <p><a class="small" href=" " target="_blank">View on GitHub</a></p>
       </article>
     </div>
   </section>
