--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <ul class="meta">
         <li><strong>Study:</strong> B.Sc. Digital Forensics (MAKAUT, 2023–2026)</li>
-        <li><strong>Goal:</strong> Ethical Hacker / Pentester & Forensic Researcher</li>
+        <li><strong>Goal:</strong> Digital Forensic Enthusiast, Ethical Hakcker (Pentester), Academic Researcher</li>
       </ul>
     </div>
     <aside class="hero-right">
@@ -40,7 +40,7 @@
         <div class="photo-wrap"><img src="assets/profile.jpg" alt="Sayani"></div>
         <div class="info">
           <h2>SAYANI MAITY</h2>
-          <p>Digital Forensics & Ethical Hacking Student</p>
+          <p>Digital Forensics (DFIR) Student</p>
           <div class="socials">
             <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
