--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <article class="project">
         <h3>AI-Powered Phishing Email Detector (2025–Present)</h3>
         <p>In development — this research-driven project uses NLP features, header analysis, and URL reputation signals to detect phishing emails. Seeking collaborators to expand datasets and modeling approaches.</p>
-        <p><a class="small" href=" " target="_blank">View on GitHub</a></p>
+        <p><a class="small" href="https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector" target="_blank">View on GitHub</a></p>
       </article>
     </div>
   </section>
