--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="slideshow" id="slideshow">
-        <div class="slide active"><img src="assets/proj1.png" alt=""><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
+        <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt=""><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
         <div class="slide"><img src="assets/proj2.png" alt=""><div class="cap">AI Phishing Detector (In Development)</div></div>
         <div class="slide"><img src="assets/proj3.png" alt=""><div class="cap">Forensic Case Study</div></div>
         <div class="controls"><button id="prev">‹</button><button id="next">›</button></div>
