--- a/index.html
+++ b/index.html
@@ -83,16 +83,20 @@
     <!-- Languages & Scripting -->
     <h3>Languages & Scripting</h3>
     <div class="skill">
+      <label>HTML</label>
+      <div class="bar" data-val="80"><div class="fill"></div></div>
+    </div>
+    <div class="skill">
       <label>Python</label>
       <div class="bar" data-val="80"><div class="fill"></div></div>
     </div>
     <div class="skill">
       <label>Bash Scripting</label>
-      <div class="bar" data-val="80"><div class="fill"></div></div>
+      <div class="bar" data-val="75"><div class="fill"></div></div>
     </div>
     <div class="skill">
       <label>Shell Scripting</label>
-      <div class="bar" data-val="75"><div class="fill"></div></div>
+      <div class="bar" data-val="70"><div class="fill"></div></div>
     </div>
 
     <!-- Security & Pentesting -->
