--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="slideshow" id="slideshow">
         <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt=""><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
-        <div class="slide"><img src="assets/proj2.png" alt=""><div class="cap">AI Phishing Detector (In Development)</div></div>
+        <div class="slide"><img src="assets/AI Phishing Detector (In Development).jpg" alt=""><div class="cap">AI Phishing Detector (In Development)</div></div>
         <div class="slide"><img src="assets/proj3.png" alt=""><div class="cap">Forensic Case Study</div></div>
         <div class="controls"><button id="prev">‹</button><button id="next">›</button></div>
       </div>
@@ -110,6 +110,8 @@
       <div class="bar" data-val="70"><div class="fill"></div></div>
     </div>
 
+    
+
     <!-- Forensics -->
     <h3>Forensics</h3>
     <div class="skill">
@@ -124,6 +126,8 @@
       <label>OSINT & Research</label>
       <div class="bar" data-val="75"><div class="fill"></div></div>
     </div>
+
+    
 
     <!-- Cloud -->
     <h3>Cloud</h3>
