--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <aside class="hero-right">
       <div class="profile-card">
-        <div class="photo-wrap"><img src="assets/profile.jpg" alt="Sayani"></div>
+        <div class="photo-wrap"><img src="assets/profile.jpg" alt="SAYANI"></div>
         <div class="info">
           <h2>SAYANI MAITY</h2>
           <p>Digital Forensics (DFIR) Student</p>
@@ -56,7 +56,7 @@
       <div class="slideshow" id="slideshow">
         <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt=""><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
         <div class="slide"><img src="assets/AI Phishing Detector (In Development).jpg" alt=""><div class="cap">AI Phishing Detector (In Development)</div></div>
-        <div class="slide"><img src="assets/proj3.png" alt=""><div class="cap">Forensic Case Study</div></div>
+        <div class="slide"><img src="assets/Forensic Case Study.jpg" alt=""><div class="cap">Forensic Case Study</div></div>
         <div class="controls"><button id="prev">‹</button><button id="next">›</button></div>
       </div>
     </aside>
@@ -98,6 +98,8 @@
       <label>Shell Scripting</label>
       <div class="bar" data-val="70"><div class="fill"></div></div>
     </div>
+
+    
 
     <!-- Security & Pentesting -->
     <h3>Security & Pentesting</h3>
