--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="slideshow" id="slideshow">
         <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt=""><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
-        <div class="slide"><img src="assets/AI Phishing Detector (In Development).jpg" alt=""><div class="cap">AI Phishing Detector (In Development)</div></div>
+        <div class="slide"><img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt=""><div class="cap">AI- powered Phishing Email Detector (In Development)</div></div>
         <div class="slide"><img src="assets/Forensic Case Study.jpg" alt=""><div class="cap">Forensic Case Study</div></div>
         <div class="controls"><button id="prev">‹</button><button id="next">›</button></div>
       </div>
